Using environment  variables.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Node.JS</title>
+    <style>
+        .main{
+            background-color: rgb(18,31,61);
+        }
+    </style>
 </head>
-<body>
+<body class="main">
     <h3>Test in log</h3>
     <script src="conceptos/monohilos.js"></script>
 </body>
